# parsefloat

./: .gitignore  CMakeLists.txt  README.md  strtodouble.c  strtodouble.h  tests.c
